# embodied-portrait-vision

./: .gitignore  README.md
docs/: architecture.md
src/composition_analyzer/: CMakeLists.txt  package.xml
src/composition_analyzer/include/composition_analyzer/: composition_rules.hpp
src/composition_analyzer/src/: composition_analyzer_node.cpp  composition_rules.cpp
src/embodied_vision_bringup/: CMakeLists.txt  package.xml
src/embodied_vision_bringup/launch/: composition_pipeline.launch.py
src/portrait_interfaces/: CMakeLists.txt  package.xml
src/portrait_interfaces/msg/: BoundingBox2D.msg  CompositionScore.msg  Detection2D.msg  DetectionArray.msg  Skeleton2D.msg  SkeletonArray.msg  SkeletonKeypoint2D.msg
src/vision_camera/: CMakeLists.txt  README.md  package.xml
src/vision_camera/src/: camera_node.cpp  camera_subscriber.cpp
src/vision_detector/: CMakeLists.txt  package.xml
src/vision_detector/scripts/: detector_ort_node.py
src/vision_detector/src/: detector_node.cpp
src/vision_skeleton/: package.xml  setup.cfg  setup.py
src/vision_skeleton/vision_skeleton/: skeleton_node.py
